--- a/public/homepage/home-2/index.html
+++ b/public/homepage/home-2/index.html
@@ -52,7 +52,7 @@
 <!-- preloader end -->
 <header class="navigation">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="/"><img class="img-fluid" src="/images/logo.png" alt="Parsa Hugo | Personal Blog Template"></a>
+    <a class="navbar-brand" href="/"><img class="img-fluid" src="/images/logo_square_small.png" alt="Parsa Hugo | Personal Blog Template"></a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
       aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -317,7 +317,9 @@
               <li class="list-inline-item"><i class="ti-alarm-clock mr-2"></i><span class="eta"></span> read</li>
             </ul>
             <h4 class="mb-4"><a href="/blog/charming-evening-field.9/" class="text-dark">Charming Evening Field</a></h4>
-            <p class="mb-0 post-summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="mb-0 post-summary">Au dessus
+ Encadré
+ En dessous</p>
             <a class="btn btn-transparent mb-4" href="/blog/charming-evening-field.9/">Continue...</a>
           </div>
         </article>
@@ -362,7 +364,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          <a href="/"><img src="/images/logo.png" alt="Parsa Hugo | Personal Blog Template" class="img-fluid"></a>
+          <a href="/"><img src="/images/logo_square_small.png" alt="Parsa Hugo | Personal Blog Template" class="img-fluid"></a>
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           
