--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -54,7 +54,7 @@
 <!-- preloader end -->
 <header class="navigation">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="/"><img class="img-fluid" src="/images/logo.png" alt="Parsa Hugo | Personal Blog Template"></a>
+    <a class="navbar-brand" href="/"><img class="img-fluid" src="/images/logo_square_small.png" alt="Parsa Hugo | Personal Blog Template"></a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
       aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -129,7 +129,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          <a href="/"><img src="/images/logo.png" alt="Parsa Hugo | Personal Blog Template" class="img-fluid"></a>
+          <a href="/"><img src="/images/logo_square_small.png" alt="Parsa Hugo | Personal Blog Template" class="img-fluid"></a>
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           
