--- a/public/homepage/home-2/index.html
+++ b/public/homepage/home-2/index.html
@@ -85,9 +85,9 @@
 
 
 </header>
-<div class="logo">
+<div>
 <a href="https://benontrack.netlify.app/" style="display: block">
-<img  src="https://benontrack.netlify.app/images/logo_main.png" alt="BenOnTrack">
+<img  src="https://benontrack.netlify.app/images/logo_main.png" alt="BenOnTrack" class="logo">
 </a>
 </div>
 
@@ -195,7 +195,7 @@
           <p class="text-uppercase mb-2">America</p>
           <h4 class="title-border"><a class="text-dark" href="https://benontrack.netlify.app/blog/2012-08-05-venezuela-colombia/">Venezuela - Colombia</a></h4>
           <p>Trip 2012 Enjoy this little video summarising my trip with Julien to Venezuela and Colombia in 2012!
- </p>
+  </p>
           <a href="https://benontrack.netlify.app/blog/2012-08-05-venezuela-colombia/" class="btn btn-transparent">read more</a>
         </article>
       </div>
