--- a/public/about/index.html
+++ b/public/about/index.html
@@ -98,7 +98,7 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12">
         <h2 class="mb-4">About</h2>
         <img src="https://benontrack.netlify.app/images/author.jpg" alt="BenOnTrack" class="img-fluid w-100 mb-4">
         <div class="content"><h3 id="ben-on-track"><strong>Ben On Track</strong></h3>
