--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -96,7 +96,7 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12">
         <h2 class="mb-4">Contact</h2>
         <img src="https://benontrack.netlify.app/images/contact.jpg" alt="BenOnTrack" class="img-fluid w-100 mb-4">
         <p>Strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream and, as I lie close to the earth, a thousand unknown plants are noticed by me.<br><br>When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath of that universal love which bears and sustains.</p>
@@ -119,8 +119,6 @@
     </div>
   </div>
 </section>
-
-
 
 <footer class="bg-secondary">
   <div class="section">
