--- a/public/homepage/home-1/index.html
+++ b/public/homepage/home-1/index.html
@@ -17,6 +17,8 @@
   
   <link rel="stylesheet" href="https://benontrack.netlify.app/plugins/themify-icons/themify-icons.css ">
   
+  <link rel="stylesheet" href="https://benontrack.netlify.app/plugins/blueimp/blueimp-gallery.min.css ">
+  
 
   <!-- Main Stylesheet -->
   
@@ -427,8 +429,7 @@ After another terrible night bus trip from Bangalore, and a small ferry trip, I&
           <p class="text-uppercase mb-2">Tips</p>
           <h4 class="title-border"><a class="text-dark" href="https://benontrack.netlify.app/blog/2019-09-14-must-have-travel-apps/">Must-Have travel apps !</a></h4>
           <p>Discover the must-have apps any traveler should have on his/her smartphone&hellip;
-Maps.me - Find your way!
-When it comes to travel abroad, there will always be a time when you&rsquo;ll need to find your location.</p>
+Maps.me - Find your way! When it comes to travel abroad, there will always be a time when you&rsquo;ll need to find your location.</p>
           <a href="https://benontrack.netlify.app/blog/2019-09-14-must-have-travel-apps/" class="btn btn-transparent">read more</a>
         </article>
       </div>
@@ -619,8 +620,6 @@ When it comes to travel abroad, there will always be a time when you&rsquo;ll ne
 <script src="https://benontrack.netlify.app/plugins/search/mark.js"></script>
 
 <script src="https://benontrack.netlify.app/plugins/search/search.js"></script>
-
-<script src="https://benontrack.netlify.app/plugins/blueimp/blueimp-gallery.min.js"></script>
 
 
 <!-- Main Script -->
