--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
   
   <link rel="stylesheet" href="https://benontrack.netlify.app/plugins/themify-icons/themify-icons.css ">
   
+  <link rel="stylesheet" href="https://benontrack.netlify.app/plugins/blueimp/blueimp-gallery.min.css ">
+  
 
   <!-- Main Stylesheet -->
   
@@ -459,8 +461,6 @@ After another terrible night bus trip from Bangalore, and a small ferry trip, I&
 <script src="https://benontrack.netlify.app/plugins/search/mark.js"></script>
 
 <script src="https://benontrack.netlify.app/plugins/search/search.js"></script>
-
-<script src="https://benontrack.netlify.app/plugins/blueimp/blueimp-gallery.min.js"></script>
 
 
 <!-- Main Script -->
