--- a/public/homepage/home-2/index.html
+++ b/public/homepage/home-2/index.html
@@ -386,7 +386,7 @@ Some people eat to live, while others live to eat.</p>
           <p class="text-uppercase mb-2">Asia</p>
           <h4 class="title-border"><a class="text-dark" href="https://benontrack.netlify.app/blog/2019-09-26-sri-lanka-the-hidden-gem/">Sri Lanka - The hidden gem</a></h4>
           <p>Starting from Colombo city, we decide to travel around the Cultural triangle of Sri Lanka&hellip;
- After a quick discussion with Benoît who&rsquo;s joining me on this trip, we decide to skip the beaches and instead focus on the strong sri lankan culture, mainly made of a mix of Sinhalese, Tamil and Muslim.</p>
+                                                After a quick discussion with Benoît who&rsquo;s joining me on this trip, we decide to skip the beaches and instead focus on the strong sri lankan culture, mainly made of a mix of Sinhalese, Tamil and Muslim.</p>
           <a href="https://benontrack.netlify.app/blog/2019-09-26-sri-lanka-the-hidden-gem/" class="btn btn-transparent">read more</a>
         </article>
       </div>
@@ -397,8 +397,7 @@ Some people eat to live, while others live to eat.</p>
           <p class="text-uppercase mb-2">Asia</p>
           <h4 class="title-border"><a class="text-dark" href="https://benontrack.netlify.app/blog/2019-09-18-india-kerala/">India - Kerala</a></h4>
           <p>Heading south to Kerala and its famous backwaters
- Kerala 
-After another terrible night bus trip from Bangalore, and a small ferry trip, I&rsquo;ve reached Kochi, my first city in Kerala on the Malabar coast of India.</p>
+Kerala After another terrible night bus trip from Bangalore, and a small ferry trip, I&rsquo;ve reached Kochi, my first city in Kerala on the Malabar coast of India.</p>
           <a href="https://benontrack.netlify.app/blog/2019-09-18-india-kerala/" class="btn btn-transparent">read more</a>
         </article>
       </div>
