--- a/public/index.html
+++ b/public/index.html
@@ -304,8 +304,7 @@
           <p class="text-uppercase mb-2">Asia</p>
           <h4 class="title-border"><a class="text-dark" href="https://benontrack.netlify.app/blog/2019-09-18-india-kerala/">India - Kerala</a></h4>
           <p>Heading south to Kerala and its famous backwaters
- Kerala 
-After another terrible night bus trip from Bangalore, and a small ferry trip, I&rsquo;ve reached Kochi, my first city in Kerala on the Malabar coast of India.</p>
+Kerala After another terrible night bus trip from Bangalore, and a small ferry trip, I&rsquo;ve reached Kochi, my first city in Kerala on the Malabar coast of India.</p>
           <a href="https://benontrack.netlify.app/blog/2019-09-18-india-kerala/" class="btn btn-transparent">read more</a>
         </article>
       </div>
