--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -29,8 +29,6 @@
   <link rel="icon" href="https://benontrack.netlify.app/images/favicon.png " type="image/x-icon">
   
   
-  <meta property="og:image" content="https://benontrack.netlify.app/images/contact.jpg" />
-  
   <meta property="og:title" content="Contact" />
 <meta property="og:description" content="This is meta description" />
 <meta property="og:type" content="article" />
@@ -124,10 +122,10 @@
     <div class="row">
       <div class="col-sm-12">
         <h2 class="mb-4">Contact</h2>
-        <img src="https://benontrack.netlify.app/images/contact.jpg" alt="BenOnTrack" class="img-fluid w-100 mb-4">
-        <p>Strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream and, as I lie close to the earth, a thousand unknown plants are noticed by me.<br><br>When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath of that universal love which bears and sustains.</p>
+        
+        
 
-        <form action="mailto:benontrack@gmail.com" class="row mt-5">
+        <form name="contact" method="POST" data-netlify="true" class="row mt-5">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" name="name" id="name" placeholder="Name">
           </div>
