--- a/public/homepage/home-2/index.html
+++ b/public/homepage/home-2/index.html
@@ -309,7 +309,7 @@
           <img class="img-fluid mb-4" src="https://benontrack.netlify.app/images/post/Thinkerview.jpg" alt="post-thumb">
           <p class="text-uppercase mb-2">Podcast</p>
           <h4 class="title-border"><a class="text-dark" href="https://benontrack.netlify.app/blog/2021-05-01-thinkerview/">Thinkerview</a></h4>
-          <p>Si vous ne savez pas comment occuper vos longues soirées confinées, je vous conseille cette chaîne de podcast d&rsquo;émission-débat :</p>
+          <p>Si vous ne savez pas comment occuper vos longues soirées confinées, je vous conseille cette chaîne de podcast d&rsquo;émission-débat (merci à zaza!</p>
           <a href="https://benontrack.netlify.app/blog/2021-05-01-thinkerview/" class="btn btn-transparent">read more</a>
         </article>
       </div>
